[package]
name = "controller_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.8", features = ["lua51", "vendored"] }
shared_memory = "0.12"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_SystemInformation"
] }
